Add importanttermqueries task to build.gradle. a